--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="project" content="home" />
   <title>home</title>
-  <link rel="stylesheet" href="./styles/home.css"/>
+  <link rel="stylesheet" href="home.css"/>
 </head>
 <body>
 <div class="desktop">
-  <img class="n-1-4iy" src="./assets/n-1.png"/>
+  <img class="n-1-4iy" src="n-1.png"/>
   <div class="group-1">
     <div class="item">SPRING</div>
     <div class="item">SUMMER</div>
