--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <div class="desktop">
   <img class="n-1-4iy" src="./n-1.png"/>
   <div class="group-1">
-    <div class="item">SPRING</div>
-    <div class="item">SUMMER</div>
-    <div class="item">AUTUMN</div>
-    <div class="item">WINTER</div>
+      <div class="item"><a href="https://kimhysoo.github.io/spring/">SPRING</a></div>
+    <div class="item"><a href="https://kimhysoo.github.io/summer/">SUMMER</a></div>
+    <div class="item"><a href="https://kimhysoo.github.io/autumn/">AUTUMN</a></div>
+    <div class="item"><a href="https://kimhysoo.github.io/winter/">WINTER</a></div>
   </div>
   <div class="location-map">
     <h3 class="sub"> 시흥시 지도</h3>
