--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101439.32353503029!2d126.75519845!3d37.3903322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b65333703bf0d%3A0xaa905ccdbfab5c7b!2z6rK96riw64-EIOyLnO2dpeyLnA!5e0!3m2!1sko!2skr!4v1702143145536!5m2!1sko!2skr" width="1000" height="750" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>         
   </div>
   <div class="question">가장 아름다운 계절은 언제였나요?</div>
-  <div class="rectangle-2">
+  <a href="https://kimhysoo.github.io/survey/">투표하러가기</a>
+<footer>
+  <div class="rectangle">
+      <p>202001159김형수</p>
   </div>
+</footer>
 </div>
 </body>
+</html>
